--- a/order/pom.xml
+++ b/order/pom.xml
@@ -47,6 +47,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<!--			<version>4.0.1</version>-->
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
