--- a/order/pom.xml
+++ b/order/pom.xml
@@ -52,6 +52,15 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<!--			<version>4.0.1</version>-->
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
