--- a/reviews/pom.xml
+++ b/reviews/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 <!--			<version>4.0.1</version>-->
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
