--- a/user/pom.xml
+++ b/user/pom.xml
@@ -52,14 +52,13 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-observation</artifactId>
 		</dependency>
-
-		<!-- OPTION 1: Open Telemetry as Bridge (RECOMMENDED) -->
-		<!-- Open Telemetry
-            - Simplified Observability (metrics, logs, and traces) -->
-
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing-bridge-otel</artifactId>
